[project]
name = "towerbrock"
version = "0.1.0"
description = ""
authors = [
    {name = "Joshua Armaine Gilo",email = "joshua_gilo@dlsu.edu.ph"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pygame (>=2.6.1,<3.0.0)",
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "numpy (>=2.2,<3.0)",
    "dlib (>=20.0.0,<21.0.0)",
    "imutils (>=0.5.4,<0.6.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
